
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-2 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Adjusted welcome screen URL to go to a non-release specific confluence page
- [#MODX-2000] Fixed FC rule to apply to template fields by overriding in controller
- [#MODX-2000] Add ability to specify a template in REQUEST or alter via plugin in resource/create controller
- [#MODX-2004] Allow settings to be duplicated when duplicating a context
- Added missing OnUserBeforeRemove event
- [#MODX-1797] Fix bug with publishedby field getting updated unintentionally
- [#MODX-1919], [#XPDO-52] Update xPDO to revision 425 for fix to xPDOManager::createObjectContainer()
- [#MODX-1918], [#MODX-1919] Improve error reporting in database setup steps
- Made default click behavior for Files in file tree be to edit
- [#MODX-1995] Fixed issues regarding sending password via email with new users
- [#MODX-1549] Preserve file tree state
- [#MODX-1810] Gender now saves correctly in user panel
- [#MODX-1635] Redirect to Users grid after creating a new user
- Fixed bug with import properties
- [#MODX-1971] Allow ./- in Context key names, but not as first character
- [#MODX-1997] Added ability to duplicate and set inactive/active Form Customization Rules, batch actions to Rule grid
- Cleaned up profile editing page
- Cleaned up style for headers on welcome page
- Reworked System Info page, cleaned up styling, display, info
- Added batch actions to Users grid
- Fixed bugs with removing directories in file tree
- [#MODX-1996] Fixed missing create/update settings windows
- Allow for separate paths on derivative resource types based on a [classkey]_delegate_path setting that points to their controllers, added checks to prevent path mapping